# reliev

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
benchmarks/: benchmark.py
docs/: index.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: computed.md  context.md  mutations.md  nested-mutations.md  reactivity.md  undo-redo.md
docs/internals/: architecture.md
docs/reference/: api.md
examples/: store_with_undo_redo.py
reliev/: store.py
tests/: test_property.py  test_store.py
