[project]
name = "reliev"
version = "0.1.3"
description = "Complementary store library for observ"
authors = [
    { name = "Berend Klein Haneveld", email = "berendkleinhaneveld@gmail.com" },
    { name = "Korijn van Golen", email = "korijn@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = ["Typing :: Typed"]
dependencies = [
    "observ>=1.0.0",
    "patchdiff>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fork-tongue/reliev"

[dependency-groups]
dev = [
    "ruff",
    "hypothesis",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-timeout",
    "ty",
]
ruff = ["ruff"]
ty = ["ty"]

[tool.ty.src]
include = ["reliev"]

[tool.ty.environment]
# Match the oldest supported Python version (requires-python), so
# that the type checker catches use of newer typing features
python-version = "3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]

[tool.ruff.lint.per-file-ignores]
# command line tool that reports through print
"benchmarks/compare_runs.py" = ["T201"]

[tool.pytest.ini_options]
# GC pauses during timed rounds are a major source of benchmark noise,
# so garbage collection is disabled while benchmarks are being timed.
addopts = "--benchmark-columns='median, mean, stddev, rounds' --benchmark-disable-gc"
